# xPyD-integration

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  sim_adapter.py
.github/workflows/: integration.yml
bot/: AUTHOR_POLICY.md  BOT_POLICY.md  DESIGN_PRINCIPLES.md  REVIEW_POLICY.md
docs/: TRIGGER_TEMPLATE.md
tests/bench_integration/: test_api_key.py  test_chat_params.py  test_dummy.py  test_dummy_params.py  test_embeddings.py  test_eos_behavior.py  test_issue18_streaming_format.py  test_issue85_echo_tokens.py  test_m3_params.py  test_m77_vision.py  test_request_id.py  test_structured_output.py
tests/c1_single_node_basic/: conftest.py  test_chat.py  test_models_and_embeddings.py
tests/c2_single_node_advanced/: conftest.py
tests/e2e/: test_pd_disaggregation.py  test_proxy_sim.py
tests/single_basic/: test_basic_params.py  test_completions.py
tests/stress/: test_benchmark_e2e.py  test_benchmark_integration.py
xpyd_integration/1p1d_advanced/: conftest.py  test_dual_routing.py  test_large_payload.py  test_multi_model_routing.py  test_resilience_integration.py
xpyd_integration/1p1d_basic/: conftest.py  test_discovery.py  test_proxy.py  test_proxy_sim_e2e.py  test_sim_nodes.py  test_status_instances.py  test_streaming_edge.py  test_xpyd_start_proxy_integration.py  test_yaml_integration.py
xpyd_integration/1p1d_concurrent_stress/: conftest.py  test_benchmark_e2e.py  test_benchmark_integration.py  test_concurrent_requests.py
xpyd_integration/single_advanced/: test_api_key.py  test_api_key_full.py  test_chat_params.py  test_dummy_params.py  (+5 more)
(+10 files in other folders)
